--- a/process-selected-text/manifest.json
+++ b/process-selected-text/manifest.json
@@ -12,5 +12,8 @@
         "js": ["process_selection.js"],
         "run_at": "document_end"
     }],
-  "permissions" : ["tabs"]
+  "permissions" : [
+      "tabs",
+      "storage"
+   ]
 }
